# view_from_gazebo

./: .bash_custom  .gitignore  Dockerfile  readme.md  run-gazebo.sh
3D_models/: calibration_pattern_8x8_2m.blend  camera.blend
vm_shared/models/camera/: camera.sdf  model.config
vm_shared/models/camera/meshes/: camera.dae
vm_shared/models/chekerboard_pattern/: chekerboard_pattern.sdf  model.config
vm_shared/models/chekerboard_pattern/meshes/: calibration_pattern_8x8_2m.dae
vm_shared/src/: CMakeLists.txt  common.hpp
vm_shared/src/move_model_hw/: CMakeLists.txt  model_push.cc
vm_shared/src/opencv_ipc/: CMakeLists.txt  main.cpp
vm_shared/src/plugin_hw/: CMakeLists.txt
vm_shared/src/sensor_ipc/: CMakeLists.txt  sensorIPC.cpp
vm_shared/worlds/: camera_calibration.world  camera_calibration_hello_world_plugin.world  camera_calibration_move_model.world
